[metadata]
name = wensleydale
summary = Mr Wensleydale. Query the AST.
description-file = README.rst
author = Rishi Ramraj
author_email = thereisnocowlevel@gmail.com
home-page = https://github.com/RishiRamraj/wensleydale
classifier =
  Development Status :: 2 - Pre-Alpha
  Environment :: Console
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Operating System :: POSIX :: Linux
  Programming Language :: Python :: 3.5

[entry_points]
console_scripts =
    wensleydale = wensleydale.cli:main

[files]
packages =
  wensleydale

[pbr]
warnerrors = true
skip_changelog = true
skip_authors = true